Fixed snackbar z-index, closes #473

--- a/src/styles/layout/_snackbar_layout.sass
+++ b/src/styles/layout/_snackbar_layout.sass
@@ -10,6 +10,7 @@
   position: absolute
   transform: translateX(-50%)
   width: fit-content
+  z-index: 1000
 
   .icon
     display: grid
